--- a/Blog.html
+++ b/Blog.html
@@ -89,7 +89,7 @@
         </div>
         <div class="carousel-inner h">
             <div class="carousel-item active">
-                <img src="5.jpg" class="d-block w-100 h" alt="...">
+                <img src="./Images/5.jpg" class="d-block w-100 h" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Welcome to iCoder</h5>
                     <p>Technogy news,Development and Threats</p>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="carousel-item h">
-                <img src="4.jpg" class="d-block w-100 h" alt="...">
+                <img src="./Images/4.jpg" class="d-block w-100 h" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Award winning Blog</h5>
                     <p>Technogy news,Development and Threats</p>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="carousel-item h">
-                <img src="3.jpg" class="d-block w-100 h" alt="...">
+                <img src="./Images/3.jpg" class="d-block w-100 h" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>The Best Conding Blog</h5>
                     <p>Technogy news,Development and Threats</p>
@@ -146,7 +146,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="A.jpg" alt="">
+                        <img class="bd-placeholder-img" width="200" height="250" src="./Images/A.jpg" alt="">
 
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="b.jpg" alt="">
+                        <img class="bd-placeholder-img" width="200" height="250" src="./Images/b.jpg" alt="">
 
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="d.jpg" alt="">
+                        <img class="bd-placeholder-img" width="200" height="250" src="./Images/d.jpg" alt="">
 
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="c.jpg" alt="">
+                        <img class="bd-placeholder-img" width="200" height="250" src="./Images/c.jpg" alt="">
 
                     </div>
                 </div>
