--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
     </div>
     <div class="col-md-5">
        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" src="e.jpg" alt="">
+            height="500" src="./Images/e.jpg" alt="">
 
     </div>
         </div>
@@ -98,7 +98,7 @@
         </div>
         <div class="col-md-5 order-md-1">
             <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid   mx-auto" width="500"
-            height="500" src="f.jpg" alt="">
+            height="500" src="./Images/f.jpg" alt="">
     
         </div>
         </div>
@@ -111,7 +111,7 @@
         </div>
         <div class="col-md-5">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" src="themb1.jpg" alt="">
+            height="500" src="./Images/themb1.jpg" alt="">
     
         </div>
         </div>
